# summer

./: .env  .gitignore  README.md  pyproject.toml
app/: agent.py  assistant.py  cli.py  config.py  conversation.py  llm.py  main.py  ollama.py
app/agent/: agent.py  executor.py  planner.py
app/conversations/: manager.py
app/memory/: manager.py  models.py  retrieval.py  storage.py
app/prompts/: system.txt
app/tools/: calculator.py  clipboard.py  manager.py  (+4 more)
backend/: config.toml  main.py  pyproject.toml
backend/app/: assistant.py  cli.py  conversation.py  main.py
backend/app/agent/: agent.py  executor.py  planner.py
backend/app/api/: chat.py  conversations.py  health.py  memory.py  models.py  workspace.py
backend/app/conversations/: __init__.py  manager.py  models.py  service.py  storage.py
backend/app/memory/: __init__.py
backend/app/prompts/: system.txt
backend/app/services/: assistant_service.py  memory_service.py  workspace_service.py
backend/app/tools/: base.py  current_time.py  directory_list.py  password.py  read_file.py  registry.py  system_info.py  uuid_gen.py  workspace_summary.py
backend/app/workspace/: __init__.py  analyzer.py  detector.py  manager.py  models.py  scanner.py
backend/data/: summer.db
backend/docs/: ARCHITECTURE.md  CHANGELOG.md  FEATURES.md  ROADMAP.md  TOOL_API.md
backend/summer.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
data/: memory.db  summer.db
docs/: CHANGELOG.md  MEMORY.md
frontend/: package-lock.json  package.json
summer.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
(+21 files in other folders)
