[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "summer"
version = "0.1.0"
description = "A terminal-native AI assistant"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.24.0",
]

[project.scripts]
summer = "app.main:main"

[tool.setuptools]
packages = ["app"]

