[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "summer"
version = "0.1.0"
description = "A terminal-native AI assistant"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ollama>=0.2.0",
    "rich>=13.0.0",
    "typer>=0.9.0",
    "python-dotenv>=1.0.0",
    "pyperclip>=1.0.0",
]

[project.scripts]
summer = "app.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
